--- a/views/404.jade
+++ b/views/404.jade
@@ -1,2 +1,8 @@
-h1='Not Found'
-div='Sorry, the page you are looking for does not exist.'
+extends header
+
+block content
+  #game-window(style="width:100%;height:100%;position:fixed;text-align:center")
+        #error(style="margin-top:20%")
+          #error-box
+            #error-msg Page Not Found
+              div Sorry, the page you are looking for does not exist.
