--- a/views/500.jade
+++ b/views/500.jade
@@ -1,7 +1,8 @@
-!!! 5
-html
-  head
-    title='500 Error'
-  body
-    h1='The Server Encountered and Error'
-    div=error
+extends header
+
+block content
+  #game-window(style="width:100%;height:100%;position:fixed;text-align:center")
+        #error(style="margin-top:20%")
+          #error-box
+            #error-msg Internal Server Error
+              div=error
