--- a/views/index.jade
+++ b/views/index.jade
@@ -1,4 +1,9 @@
 extends layout
+block gameSpecific
+	each jsFile in gameResources['js']
+		script(src='#{jsFile}')
+	each cssFile in gameResources['css']
+		link(rel='stylesheet', href='#{cssFile}')
 
 block content
 	#game-window(style="width:100%;height:100%;position:fixed;")
