--- a/static/css/games/Catan/interface.css
+++ b/static/css/games/Catan/interface.css
@@ -1,19 +1,19 @@
-	#hand,#actions {
-		position:absolute;
-		bottom:50px;
-		left:0;
-		width:100%;
-		height:100px;
-	}
-	
-	#actions>input, #purchase_modal input {
-		font-size:3em;
-		text-align:center;
-		display:inline-block;
-		color:black;
-		height:70px;
-		background-color:gray;
-	}
+#hand,#actions {
+	position:absolute;
+	bottom:50px;
+	left:0;
+	width:100%;
+	height:100px;
+}
+
+#actions>input, #purchase_modal input {
+	font-size:3em;
+	text-align:center;
+	display:inline-block;
+	color:black;
+	height:70px;
+	background-color:gray;
+}
 	
 #cancelPurchase_button{
 	position:absolute;
@@ -48,6 +48,7 @@
 }
 
 #purchase_modal {
+	transition: all 0.2s ease-out;
 	-webkit-transition: all 0.2s ease-out;
 	z-index: 10;
 	position:absolute;
