--- a/static/css/style.css
+++ b/static/css/style.css
@@ -104,14 +104,6 @@ body {
     background-color:darkred;
 }
 
-.visible-text {
-    font-size:18px;
-    font-weight:100px;
-    color:white;
-    font-family:'Helvetica Neue', Arial, sans-serif;
-    text-shadow:-1px -1px 0 #000, 1px -1px 0 #000,-1px 1px 0 #000, 1px 1px 0 #000;
-}
-
 #games {
 	width: 100%;
 	text-align: center;
@@ -147,14 +139,14 @@ body {
     text-align:center;
     left:50%;
     top:50%;
-    width: 300px;
+    width: 18.750em;
 }
 
 #readyButton {
     position: relative;
     top: 50%;
     background-color:white;
-    width:300px;
+    width:18.750em;
     border-radius: 10px;
     box-shadow:inset 0px 1px 0px 0px #ffffff;
     background:-webkit-gradient( linear, left top, left bottom, color-stop(0.05, #ededed), color-stop(1, #cccccc) );
@@ -166,11 +158,11 @@ body {
     display:inline-block;
     color:#555555;
     font-family:arial;
-    font-size:15px;
+    font-size:0.938em;
     font-weight:bold;
     font-style:normal;
-    height:70px;
-    line-height:70px;
+    height:4.375em;
+    line-height:4.375em;
     text-decoration:none;
     text-align:center;
     text-shadow:1px 1px 0px #ffffff;
@@ -198,7 +190,7 @@ body {
     line-height: 1em;
     color: #ffffff;
     font-weight:bold;
-    font-size: 134px;
+    font-size: 8.375em;
     text-shadow:0px 0px 0 rgb(231,231,231),1px 1px 0 rgb(216,216,216),2px 2px 0 rgb(202,202,202),3px 3px 0 rgb(187,187,187),4px 4px 0 rgb(173,173,173),5px 5px 0 rgb(158,158,158), 6px 6px 0 rgb(144,144,144),7px 7px 6px rgba(0,0,0,0.6),7px 7px 1px rgba(0,0,0,0.5),0px 0px 6px rgba(0,0,0,.2);
 }
 
@@ -207,20 +199,20 @@ body {
     line-height: 1em;
     color: #ffffff;
     font-weight:bold;
-    font-size: 35px;
+    font-size: 2.188em;
     text-shadow:0px 0px 0 rgb(212,212,212),1px 1px 0 rgb(169,169,169),2px 2px 0 rgb(126,126,126), 3px 3px 0 rgb(83,83,83),4px 4px 3px rgba(0,0,0,0.6),4px 4px 1px rgba(0,0,0,0.5),0px 0px 3px rgba(0,0,0,.2);
 }
 
 .instructions {
     font-family: Georgia, serif;
     color: #ffffff;
-    font-size:36px;
+    font-size: 2.188em;
 }
 
 .name-input {
     box-shadow:inset -5px 2px 8px 0px #000;
     color:black;
-    font-size:18px;
+    font-size:1.125em;
     padding-left:20px;
     padding-right:20px;
     border-radius:20px;
@@ -237,7 +229,7 @@ body {
     border-radius: 10px;
     background-color: rgba(33, 33, 33, 0.6);
     color: white;
-    font-size: 16px;
+    font-size: 1em;
     font-weight: 100;
     font-family:'Helvetica Neue', Arial, sans-serif;
     padding: 15px;
@@ -279,7 +271,7 @@ body {
     max-width: 100%;
     margin: 0 auto;
     font-family: Georgia, serif;
-    font-size: 24px;
+    font-size: 1.500em;
     opacity: 1;
     border: 2px solid #ffffff;
 }
