--- a/static/css/games/Catan/interface.css
+++ b/static/css/games/Catan/interface.css
@@ -76,6 +76,10 @@ input[disabled]{
 	border-radius:15px;
 }
 
+#purchase_modal>input {
+margin-top: 100px;
+}
+
 .show_modal {
 	transform: translate3d(0,500px,0);
 	-webkit-transform: translate3d(0,500px,0);
