--- a/static/css/style.css
+++ b/static/css/style.css
@@ -98,6 +98,10 @@ textarea {
    Author's custom styles
    ========================================================================== */
 
+svg:not(:root) {
+	overflow: visible;
+}
+
 body { 
 	height:100%;
 	margin: 0;
@@ -133,6 +137,12 @@ body {
 	height: 100%;
 	background-color:darkred;
 	text-align:center;
+	-webkit-touch-callout: none;
+	-webkit-user-select: none;
+	-khtml-user-select: none;
+	-moz-user-select: none;
+	-ms-user-select: none;
+	user-select: none;
 }
 
 #gameBoard {
