--- a/static/css/style.css
+++ b/static/css/style.css
@@ -132,7 +132,7 @@ body {
 	text-decoration: underline;
 }
 
-#game-content {
+#gameContent {
 	width: 100%;
 	height: 100%;
 	background-color:darkred;
