--- a/static/css/games/Catan/gameboard.css
+++ b/static/css/games/Catan/gameboard.css
@@ -159,6 +159,8 @@ text {
 	font-family: Helvetica;
 	font-size: 1.5em;
 	cursor: pointer;
+	box-shadow: 0px 10px 5px #888 inset, 0px -2px 5px #000 inset;
+	-webkit-box-shadow: 0px 10px 5px #888 inset, 0px -2px 5px #000 inset;
 }
 
 #dice:disabled {
